[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Acered <acered115@yahoo.com>"]
readme = "README.md"
packages = [{include = "aoc_2023"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
